# pilepack

./: .gitignore  LICENSE  README.md  pyproject.toml  report.md  report.txt
.github/workflows/: publish.yml
codepile/: cli.py  collector.py  reader.py
pilepack/: cli.py  collector.py  formatter.py  ignorer.py  reader.py
tests/: conftest.py  test_cli.py  test_collector.py  test_formatter.py  test_ignorer.py  test_reader.py
