[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codepile"
version = "0.1.0"
description = "Pack your codebase into a single file for AI analysis"
authors = [{ name = "Vasili Pribylov", email = "dartmew@yandex.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pathspec>=0.10.0",
]

[project.scripts]
codepile = "codepile.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codepile*"]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"